--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.33",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.3.3",
     "prisma": "^5.10.2",
     "turbo": "^2.0.6",
     "typescript": "^5"
